# ProgrammingDynamicDataStructure

./: CMakeLists.txt  ProgrammingDynamicDataStructure.cpp  ProgrammingDynamicDataStructure.h  README.md  SetOnBitset.cpp  lab6.h  main.cpp
1-5/Lab1/: main.cpp
1-5/lab2/: lab2.cpp  lab2.h
1-5/lab3/: lab3.h
1-5/lab4/: lab4.cpp  lab4.h  main.cpp
1-5/lab5/: lab5.cpp  lab5.h  main.cpp
CourseWorkWithBitset/: SetOnBitset.cpp  SetOnBitset.h  courseWork.cpp  courseWork.h  main.cpp
CourseWorkWithBitset/SetOnLinkedListOnClass/: SetOnLinkedListOnClass.cpp  SetOnLinkedListOnClass.h
CourseWorkWithBitset/SetOnLinkedListOnPointers/: SetOnLinkedListOnPointers.cpp  SetOnLinkedListOnPointers.h
CourseWorkWithBitset/SetOnListStd/: SetOnListStd.cpp  SetOnListStd.h
CourseWorkWithBitset/SetOnSetStd/: SetOnSetStd.cpp  SetOnSetStd.h
Lab1/: lab1.cpp  lab1.h  main.cpp
lab2/: lab2.cpp  lab2.h  main.cpp
lab3/: lab3.cpp  lab3.h  main.cpp
lab4/: lab4.cpp  lab4.h  main.cpp
lab4 (2)/: main.cpp
lab5/: lab5.cpp  lab5.h  main.cpp
lab6/: lab6.cpp  lab6.h  main.cpp
lab6/lab2/: lab2.cpp  lab2.h
lab6/lab3/: lab3.cpp  lab3.h  main.cpp
lab6/lab4/: lab4.cpp  lab4.h  main.cpp
lab6/lab5/: lab5.cpp  lab5.h  main.cpp
lab7/: lab7.cpp  lab7.h
